fix width css with scrollbar

--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ html, body{
 }
 section {
   min-height: 100vh;
-  width: 100vw;
   padding: 0 70px;
 }
 h1, h3 {
